--- a/benchmarks/elisp-benchmarks-results.org
+++ b/benchmarks/elisp-benchmarks-results.org
@@ -14,6 +14,33 @@ performance boost override: 150 MHz
 RAM overclocked to 4600 MHz
 Curve optimizer: -25
 
+| test               | non-gc avg (s) | gc avg (s) | gcs avg | tot avg (s) | tot avg err (s) |
+|--------------------+----------------+------------+---------+-------------+-----------------|
+| bubble             |           0.42 |       0.05 |       0 |        0.47 |            0.01 |
+| bubble-no-cons     |           0.56 |       0.00 |       0 |        0.56 |            0.02 |
+| bytecomp           |           0.95 |       0.72 |      17 |        1.67 |            0.67 |
+| dhrystone          |           1.00 |       0.00 |       0 |        1.00 |            0.01 |
+| eieio              |           0.53 |       0.74 |      19 |        1.27 |            0.64 |
+| fibn               |           0.00 |       0.00 |       0 |        0.00 |            0.00 |
+| fibn-named-let     |           0.49 |       0.00 |       0 |        0.49 |            0.00 |
+| fibn-rec           |           0.00 |       0.00 |       0 |        0.00 |            0.00 |
+| fibn-tc            |           0.00 |       0.00 |       0 |        0.00 |            0.00 |
+| flet               |           0.69 |       0.00 |       0 |        0.69 |            0.00 |
+| font-lock          |           0.35 |       0.21 |       5 |        0.56 |            0.03 |
+| inclist            |           0.56 |       0.00 |       0 |        0.56 |            0.00 |
+| inclist-type-hints |           0.52 |       0.00 |       0 |        0.52 |            0.00 |
+| listlen-tc         |           0.08 |       0.00 |       0 |        0.08 |            0.00 |
+| map-closure        |           2.58 |       0.00 |       0 |        2.58 |            0.03 |
+| nbody              |           0.62 |       0.11 |       1 |        0.73 |            0.03 |
+| pack-unpack        |           0.15 |       0.27 |       7 |        0.42 |            0.00 |
+| pack-unpack-old    |           0.22 |       0.53 |      14 |        0.75 |            0.00 |
+| pcase              |           1.12 |       0.00 |       0 |        1.12 |            0.05 |
+| pidigits           |           1.75 |       3.89 |      70 |        5.63 |            0.02 |
+| scroll             |           0.00 |       0.00 |       0 |        0.00 |            0.00 |
+| smie               |           0.73 |       0.38 |       9 |        1.12 |            0.00 |
+|--------------------+----------------+------------+---------+-------------+-----------------|
+| total              |          13.33 |       6.90 |     143 |       20.23 |            0.93 |
+
 ** ("-march=znver4" "-Ofast" "-g0" "-fno-finite-math-only" "-fgraphite-identity" "-floop-nest-optimize" "-fdevirtualize-at-ltrans" "-fipa-pta" "-fno-semantic-interposition" "-flto=auto" "-fuse-linker-plugin")
 :PROPERTIES:
 :CREATED_TIME: [2024-04-21 Sun 21:47]
