--- a/README.org
+++ b/README.org
@@ -43,10 +43,8 @@ I've also added a few custom patches to Emacs, which are available in the
 2. ~use-custom-cflags-for-native-comp.patch~: Sets custom CFLAGS for native
    compilation. These flags are specific to my computer but they serve as a good
    example.
-3. ~use-lexical-binding-everywhere.patch~: Enables lexical binding everywhere as
-   the default in Emacs and disables checking of the ~-*- lexical-binding: t~
-   header. I have fixed all Emacs packages in this config which previously broke
-   with lexical binding.
+3. ~use-compilation-safety-0.patch~: Allows native-compiled elisp to misbehave and
+   crash Emacs. This allows for greater speed but less safety.
 
 Note: If you use any of these patches on your version of Emacs, you must ensure
 bugs are reproducible in an unmodified version of Emacs before reporting them
