benchmarks/elisp-benchmarks-results.org

--- a/benchmarks/elisp-benchmarks-results.org
+++ b/benchmarks/elisp-benchmarks-results.org
@@ -170,3 +170,38 @@ math. I'm using a Ryzen 9 7950X CPU.
 | smie               |           0.78 |       0.43 |       4 |        1.21 |            0.00 |
 |--------------------+----------------+------------+---------+-------------+-----------------|
 | total              |          15.04 |       8.98 |      80 |       24.02 |            1.97 |
+
+* 9950X
+:PROPERTIES:
+:CREATED_TIME: [2024-08-23 Fri 00:26]
+:END:
+
+This is after overclocking the RAM to 5600 MHz. The CPU is currently set to the
+default motherboard turbo boost setting.
+
+  | test               | non-gc (s) | gc (s) | gcs | total (s) | err (s) |
+  |--------------------+------------+--------+-----+-----------+---------|
+  | bubble             |       0.33 |   0.00 |   0 |      0.33 |    0.02 |
+  | bubble-no-cons     |       0.41 |   0.00 |   0 |      0.41 |    0.01 |
+  | bytecomp           |       0.73 |   0.00 |   0 |      0.73 |    0.01 |
+  | dhrystone          |       0.70 |   0.00 |   0 |      0.70 |    0.00 |
+  | eieio              |       0.40 |   0.00 |   0 |      0.40 |    0.00 |
+  | fibn               |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+  | fibn-named-let     |       0.41 |   0.00 |   0 |      0.41 |    0.00 |
+  | fibn-rec           |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+  | fibn-tc            |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+  | flet               |       0.73 |   0.00 |   0 |      0.73 |    0.01 |
+  | font-lock          |       0.36 |   0.00 |   0 |      0.36 |    0.11 |
+  | inclist            |       0.60 |   0.00 |   0 |      0.60 |    0.01 |
+  | inclist-type-hints |       0.59 |   0.00 |   0 |      0.59 |    0.00 |
+  | listlen-tc         |       0.09 |   0.00 |   0 |      0.09 |    0.00 |
+  | map-closure        |       2.03 |   0.00 |   0 |      2.03 |    0.01 |
+  | nbody              |       0.48 |   0.00 |   0 |      0.48 |    0.02 |
+  | pack-unpack        |       0.10 |   0.00 |   0 |      0.10 |    0.00 |
+  | pack-unpack-old    |       0.17 |   0.00 |   0 |      0.17 |    0.00 |
+  | pcase              |       1.13 |   0.00 |   0 |      1.13 |    0.00 |
+  | pidigits           |       1.67 |   0.00 |   0 |      1.67 |    0.85 |
+  | scroll             |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+  | smie               |       0.63 |   0.00 |   0 |      0.63 |    0.00 |
+  |--------------------+------------+--------+-----+-----------+---------|
+  | total              |      11.56 |   0.00 |   0 |     11.56 |    0.86 |
