benchmarks/elisp-benchmarks-results.org

--- a/benchmarks/elisp-benchmarks-results.org
+++ b/benchmarks/elisp-benchmarks-results.org
@@ -205,3 +205,8 @@ default motherboard turbo boost setting.
   | smie               |       0.63 |   0.00 |   0 |      0.63 |    0.00 |
   |--------------------+------------+--------+-----+-----------+---------|
   | total              |      11.56 |   0.00 |   0 |     11.56 |    0.86 |
+
+* Another before parallel stuff
+:PROPERTIES:
+:CREATED_TIME: [2025-03-23 Sun 23:32]
+:END:
