--- a/benchmarks/elisp-benchmarks-results.org
+++ b/benchmarks/elisp-benchmarks-results.org
@@ -206,7 +206,7 @@ default motherboard turbo boost setting.
   |--------------------+------------+--------+-----+-----------+---------|
   | total              |      11.56 |   0.00 |   0 |     11.56 |    0.86 |
 
-* Another before parallel stuff
+* Another after parallel stuff
 :PROPERTIES:
 :CREATED_TIME: [2025-03-23 Sun 23:32]
 :END:
