--- a/benchmarks/elisp-benchmarks-results.org
+++ b/benchmarks/elisp-benchmarks-results.org
@@ -237,3 +237,30 @@ default motherboard turbo boost setting.
 | smie               |       0.84 |   0.00 |   0 |      0.84 |    0.10 |
 |--------------------+------------+--------+-----+-----------+---------|
 | total              |      17.22 |   0.00 |   0 |     17.22 |    0.52 |
+
+| test               | non-gc (s) | gc (s) | gcs | total (s) | err (s) |
+|--------------------+------------+--------+-----+-----------+---------|
+| bubble             |       0.73 |   0.00 |   0 |      0.73 |    0.24 |
+| bubble-no-cons     |       0.40 |   0.00 |   0 |      0.40 |    0.00 |
+| bytecomp           |       0.85 |   0.00 |   0 |      0.85 |    0.02 |
+| dhrystone          |       0.71 |   0.00 |   0 |      0.71 |    0.00 |
+| eieio              |       0.91 |   0.00 |   0 |      0.91 |    0.02 |
+| fibn               |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+| fibn-named-let     |       0.37 |   0.00 |   0 |      0.37 |    0.00 |
+| fibn-rec           |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+| fibn-tc            |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+| flet               |       0.97 |   0.00 |   0 |      0.97 |    0.00 |
+| font-lock          |       0.57 |   0.00 |   0 |      0.57 |    0.25 |
+| inclist            |       0.46 |   0.00 |   0 |      0.46 |    0.01 |
+| inclist-type-hints |       0.35 |   0.00 |   0 |      0.35 |    0.00 |
+| listlen-tc         |       0.09 |   0.00 |   0 |      0.09 |    0.03 |
+| map-closure        |       2.36 |   0.00 |   0 |      2.36 |    0.02 |
+| nbody              |       0.94 |   0.00 |   0 |      0.94 |    0.01 |
+| pack-unpack        |       0.12 |   0.00 |   0 |      0.12 |    0.01 |
+| pack-unpack-old    |       0.20 |   0.00 |   0 |      0.20 |    0.00 |
+| pcase              |       1.19 |   0.00 |   0 |      1.19 |    0.00 |
+| pidigits           |       5.75 |   0.00 |   0 |      5.75 |    0.64 |
+| scroll             |       0.00 |   0.00 |   0 |      0.00 |    0.00 |
+| smie               |       0.85 |   0.00 |   0 |      0.85 |    0.11 |
+|--------------------+------------+--------+-----+-----------+---------|
+| total              |      17.83 |   0.00 |   0 |     17.83 |    0.74 |
